--- a/angular.json
+++ b/angular.json
@@ -61,6 +61,9 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
@@ -76,12 +79,14 @@
           "builder": "@angular-devkit/build-angular:extract-i18n"
         },
         "test": {
+
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "polyfills": [
               "zone.js",
               "zone.js/testing"
             ],
+           
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
